@@ -6,19 +6,19 @@ import com.nimbusds.jose.jwk.RSAKey;
 import com.nimbusds.jose.jwk.source.ImmutableJWKSet;
 import com.nimbusds.jose.jwk.source.JWKSource;
 import com.nimbusds.jose.proc.SecurityContext;
-import com.reward.RewardBackEnd.model.Role;
 import com.reward.RewardBackEnd.service.securityServices.JpaUserDetailsService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -27,11 +27,8 @@ import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthenticationEntryPoint;
 import org.springframework.security.oauth2.server.resource.web.access.BearerTokenAccessDeniedHandler;
-import org.springframework.security.web.DefaultSecurityFilterChain;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
@@ -40,14 +37,10 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-import static com.reward.RewardBackEnd.model.Role.ROLE_CUSTOMER;
-import static com.reward.RewardBackEnd.model.Role.ROLE_MERCHANT;
-
 
 @Configuration
 @EnableWebSecurity
-//@EnableMethodSecurity
-@EnableGlobalMethodSecurity(prePostEnabled = true,securedEnabled = true)
+@EnableMethodSecurity(prePostEnabled = true,securedEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
@@ -58,16 +51,13 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-//                .csrf(csrf -> csrf.disable())
+                .csrf(AbstractHttpConfigurer::disable)
                 .cors(Customizer.withDefaults())
                 .authorizeHttpRequests(auth -> auth
-                                .requestMatchers("/token").permitAll()
-                                .requestMatchers("/api/v*/customers/sign-up", "/api/v*/customers/login").permitAll() //Removed Auth
-                                .requestMatchers("/api/v*/merchants/sign-up", "/api/v*/merchants/login").permitAll()
-                                .requestMatchers("/api/v*/stores/create-store-profile").permitAll()
-                                .requestMatchers("/api/v*/auth/customers/**").hasRole("CUSTOMER")
-                                .requestMatchers("/api/v*/auth/merchants/**").hasRole("MERCHANT")
-                                .anyRequest().authenticated()
+                        .requestMatchers(HttpMethod.POST,
+                                "/users/login", "/customers/sign-up",
+                                "/merchants/sign-up", "/stores/create-store-profile").permitAll()
+                        .anyRequest().authenticated()
                 )
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
@@ -85,7 +75,7 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
         configuration.setAllowCredentials(true);
         configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
@@ -93,17 +83,6 @@ public class SecurityConfig {
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-//    @Bean
-//    public JwtAuthenticationConverter jwtAuthenticationConverter() {
-//        final JwtGrantedAuthoritiesConverter gac = new JwtGrantedAuthoritiesConverter();
-//        gac.setAuthoritiesClaimName("authorities");
-//        gac.setAuthorityPrefix("ROLE_");
-//
-//        final JwtAuthenticationConverter jac = new JwtAuthenticationConverter();
-//        jac.setJwtGrantedAuthoritiesConverter(gac);
-//        return jac;
-//    }
 
     @Bean
     public AuthenticationManager authManager(UserDetailsService userDetailsService) {
